# jpdf

./: .env.example  .gitignore  README.md  pyproject.toml
jpdf/: __init__.py  __main__.py  app.py  cli.py  core.py
jpdf/templates/: index.html
